2005-10-14  Benhur Stein <benhur@inf.ufsm.br>
	* PajeSimulator/UserState.m: encode/decode new variables

2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
        * PajeEventDecoder/PajeEventDecoder.m: forgotten on previous commit

2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/DrawView+Drawing.m: optimize drawing code for
          variables

2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
        * StorageController/Encapsulate.m: remove field names discovery
        * General/PajeType.[hm]: add knownEventTypes variable and
          -isKnownEventType: method
        * PajeSimulator/User{Event,State}.m: use new method to speed up
          field name discovery

2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/DrawView+Drawing.m: new drawing code for events with
          support for aggregates.

2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/DrawView+Drawing.m: new drawing code for states with
          support for aggregates.

2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/DrawView+Drawing.m: new drawing code for variables

2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
        * StatViewer/StatViewer.m: forgot on previous commit

2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
        * StatViewer/PieCell.m: autosize pie; draw arc around "other" value.

2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/STEntityTypeLayout.[hm],
          SpaceTimeViewer/STLayoutEditor.{h,m,gorm}: keep user drawName choice;
          add choice for drawing pseudo-3D lines for variables

2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
	* General/PajeEntityInspector.m: add inspection of new data and
	  aggregate events and states

2005-09-30  Benhur Stein <benhur@inf.ufsm.br>
        * General/Filter.[hm]: add new query methods to support aggregates
          - (BOOL)isAggregateEntity:(id<PajeEntity>)entity;
          - (unsigned)subCountForEntity:(id<PajeEntity>)entity;